--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,15 @@ dependencies {
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava:2.5.0"
+    // okHttp
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     // picasso
     implementation "com.squareup.picasso:picasso:2.71828"
-    //room
+    // room
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
-    //дополнительно
+
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13.2'
