--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.preference:preference:1.1.1'
     def room_version = "2.3.0"
 
     implementation 'androidx.core:core-ktx:1.7.0'
