--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // okHttp
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
-    // picasso
-    implementation "com.squareup.picasso:picasso:2.71828"
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     // room
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
