--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     // okHttp
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     // room
@@ -59,7 +59,10 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt("androidx.room:room-compiler:$room_version")
 
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation("app.futured.donut:donut:2.2.0")
+    implementation("app.futured.donut:donut-compose:2.2.0")
+
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.preference:preference-ktx:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
